--- a/Start_App1/macos/Runner/Configs/AppInfo.xcconfig
+++ b/Start_App1/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = passwordgen
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.passwordgen
+PRODUCT_BUNDLE_IDENTIFIER = com.android.AndmeteSalvestamine
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
