--- a/Start_App1/pubspec.yaml
+++ b/Start_App1/pubspec.yaml
@@ -1,4 +1,4 @@
-name: passwordgen
+name: AndmeteSalvestamine
 description: "App is an app in app store"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
