--- a/memoapp/pubspec.yaml
+++ b/memoapp/pubspec.yaml
@@ -2,7 +2,7 @@ name: memoapp
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-#publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -34,14 +34,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  #cupertino_icons: ^1.0.6
   sqflite: ^2.0.0
   path: ^1.9.0
 
   flutter_localizations:
     sdk: flutter
-  intl: ^0.18.1
-  intl_utils: ^2.8.7
 
 dev_dependencies:
   flutter_test:
@@ -54,8 +52,16 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
+  flutter_launcher_icons: ^0.13.1
+
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+
+  android: true
+  image_path: "assets/icon.jpg"
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -64,9 +70,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  assets:
-    - lib/l10n/en.arb
-    - lib/l10n/et.arb
+  
 
   # To add assets to your application, add an assets section, like this:
   # assets:
